--- a/css/layout.css
+++ b/css/layout.css
@@ -1,9 +1,9 @@
 @charset "utf-8";
-@import url("http://nimage002.commutil.kr/itoozamobile/notofonts/NotoFont.css");
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap');
 
 .wrapper {
 	position: relative;
-	font-family: "NotoSansKR" !important;
+	font-family: 'Noto Sans KR' !important;
 }
 
 /* 상단 */
