--- a/css/layout.css
+++ b/css/layout.css
@@ -2209,11 +2209,13 @@ input[type=text]:-ms-clear {
 	margin: 0 10px 10px;
 	background-color: #EBEBEB;
 }
+
 #ss_wrap .outline_style {
 	height: 280px;
 	width: 100%;
 }
-#ss_wrap .outline_style .highcharts-title {	
+
+#ss_wrap .outline_style .highcharts-title {
 	font-weight: bold !important;
 }
 
@@ -2232,13 +2234,105 @@ input[type=text]:-ms-clear {
 	height: 280px;
 	width: 100%;
 }
-#ss_wrap .outline_styleSL .highcharts-title {	
+
+#ss_wrap .outline_styleSL .highcharts-title {
 	font-weight: bold !important;
-	font-size: 14px !important;	
-	color: #2a3b83 !important;    
-    fill: #2a3b83 !important
+	font-size: 14px !important;
+	color: #2a3b83 !important;
+	fill: #2a3b83 !important
 }
-#ss_wrap .outline_styleSL .highcharts-title tspan {	
-	color: #333 !important;    
-    fill: #333 !important
+
+#ss_wrap .outline_styleSL .highcharts-title tspan {
+	color: #333 !important;
+	fill: #333 !important
+}
+
+#footer {	
+	border: none;
+	padding: 1.3rem 0;	
+	text-align: center;
+	background-color: #e9e9e8;
+}
+
+#footer .txt {
+	margin-bottom: 1.1rem;
+	line-height: 1.2;
+	font-weight: 400;
+	font-size: 0.85rem;
+	color: #010101;
+}
+
+#footer .cs {
+	margin: 0 1.3rem;
+	padding: .9rem 0;
+	background-color: #fff;
+	border: 1px solid #a9a9a9;
+	border-radius: .3rem;
+	-webkit-border-radius: .3rem;
+	line-height: 1.3;	
+	color: #747474;
+}
+
+#footer .fc_red {
+    color: #ea2028 !important;
+}
+
+#footer .cs strong {
+	font-weight: 400;
+	font-size: 17px;
+	color: #000;
+}
+
+#footer nav {
+	margin-top: 1.1rem;
+}
+
+#footer nav a {
+	position: relative;
+	display: inline-block;
+	padding-left: 1rem;
+	font-size: 1.25rem;
+	color: #949493;
+}
+
+#footer nav a:before {
+	content: '|';
+	position: absolute;
+	top: .1rem;
+	left: .4rem;
+	font-size: 1rem;
+	color: #999
+}
+
+#footer nav a:first-child:before {
+	display: none;
+}
+
+#footer address {
+	padding: 10px 10px 30px;
+	margin-top: .4rem;	
+    line-height: 1.3;    
+    letter-spacing: -.05rem;
+    font-weight: 300;
+	font-size: 13px;
+	color: #949493;
+}
+
+#footer address a {
+	color: #333;
+    text-decoration: none;
+}
+
+#footer .list {
+	text-align: left;
+}
+
+#footer .list li {
+	font-size: 1.1rem;
+	color: #a3a3a3;
+}
+
+#footer.v1 {
+	margin-top: 3.7rem;
+	border-top: 1px solid #c7c7c8;
 }
