--- a/css/layout.css
+++ b/css/layout.css
@@ -2256,9 +2256,10 @@ input[type=text]:-ms-clear {
 
 #footer .txt {
 	margin-bottom: 1.1rem;
+	padding: 0 15px;
 	line-height: 1.2;
 	font-weight: 400;
-	font-size: 0.85rem;
+	font-size: 0.8rem;
 	color: #010101;
 }
 
@@ -2279,7 +2280,7 @@ input[type=text]:-ms-clear {
 
 #footer .cs strong {
 	font-weight: 400;
-	font-size: 17px;
+	font-size: 1rem;
 	color: #000;
 }
 
@@ -2314,7 +2315,7 @@ input[type=text]:-ms-clear {
     line-height: 1.3;    
     letter-spacing: -.05rem;
     font-weight: 300;
-	font-size: 13px;
+	font-size: 0.75rem;
 	color: #949493;
 }
 
