p23 하단 뉴스 제거

--- a/css/layout.css
+++ b/css/layout.css
@@ -1159,6 +1159,7 @@ ul.list_li2 li p.gap_rate {
 	border-bottom: 1px solid #ccc;
 	font-size: 14px;
 	line-height: 17px;
+	background-color: blanchedalmond;
 }
 
 .cont_wrap .item_wrap .price_wrap {
