--- a/css/layout.css
+++ b/css/layout.css
@@ -1168,10 +1168,17 @@ ul.list_li2 li p.gap_rate {
     -webkit-box-orient: vertical;
     word-wrap:break-word; 
     line-height: 17px;
-    height: 34px;
+    max-height: 34px;
 }
 #ss_wrap .cont_top_wrap .desc {	
-	background-color: blanchedalmond;	
+	overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    word-wrap:break-word; 
+    line-height: 17px;
+    max-height: 46px;	
 }
 
 .cont_wrap .item_wrap .price_wrap {
