--- a/css/layout.css
+++ b/css/layout.css
@@ -2357,3 +2357,19 @@ input[type=text]:-ms-clear {
 	margin-top: 3.7rem;
 	border-top: 1px solid #c7c7c8;
 }
+
+.scrollwrap {
+	position: relative;
+	display: block;
+	width: 100%;
+	overflow-x: auto;						
+	padding-left: 15px;
+}
+
+.scrollcontent {	
+	width: 1500px;
+	/* display: flex; */	
+}
+.ul_li {
+	display: inline-block;
+}
