--- a/css/layout.css
+++ b/css/layout.css
@@ -948,7 +948,7 @@ ul.list_li2 li p.gap_rate {
 .cont_wrap .head h3 {
 	font-size: 16px;
 	font-weight: normal;
-	background-image: url(../img/common/ico_ainfo_arrow.png);
+	background-image: url('../img/common/ico_ainfo_arrow.png');
 	background-position: 10px 18px;
 	background-repeat: no-repeat;
 	background-size: 6px auto;
@@ -2440,11 +2440,11 @@ input[type=text]:-ms-clear {
 	content: "";
 	position: absolute;
 	left: 4px;
-	top: 9px;
+	top: 10px;
 	display: inline-block;
 	width: 3px;
 	height: 3px;
-	background: #fff;
+	background: #333;
 	border-radius: 50%;
   }
   
